force-app/main/default/objects/InsurancePolicyLineItem__c/InsurancePolicyLineItem__c.object-meta.xml
<CustomObject>
    <label>Insurance Policy Line Item</label>
    <nameField>
        <displayFormat>PLI-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Policy Line Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>