force-app/main/default/objects/InsurancePolicyLineItem__c/fields/A_R_fm__c.field-meta.xml
<CustomField>
    <fullName>A_R_fm__c</fullName>
    <formula>IF( IsAdjustmentRecord__c = true , &quot;A&quot;, &quot;&quot; ) &amp; IF( IsReversed__c = true , &quot;R&quot;, &quot;&quot; )</formula>
    <label>A/R</label>
    <type>Text</type>
</CustomField>