force-app/main/default/objects/InsurancePolicyLineItem__c/fields/AccountingCurrency__c.field-meta.xml
<CustomField>
    <fullName>AccountingCurrency__c</fullName>
    <formula>CASE(
TEXT(BizRegion__c),
&quot;LK_KR&quot;, &quot;KRW&quot;,
&quot;LK_Re&quot;, &quot;USD&quot;,
&quot;LK_VN&quot;, &quot;VND&quot;,
&quot;LK_A&amp;G&quot;, &quot;KRW&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounting Currency</label>
    <type>Text</type>
</CustomField>