force-app/main/default/objects/InsurancePolicyLineItem__c/fields/AccountingDate__c.field-meta.xml
<CustomField>
    <fullName>AccountingDate__c</fullName>
    <description>마감일</description>
    <label>Accounting Date</label>
    <type>Date</type>
</CustomField>