force-app/main/default/objects/InsurancePolicyLineItem__c/fields/ADJ__c.field-meta.xml
<CustomField>
    <fullName>ADJ__c</fullName>
    <formula>Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADJ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>