force-app/main/default/objects/InsurancePolicyLineItem__c/fields/BrokerageAmtKRW__c.field-meta.xml
<CustomField>
    <fullName>BrokerageAmtKRW__c</fullName>
    <formula>BrokerageAmt__c  *  ExchangeRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brokerage Amt.(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>