force-app/main/default/objects/InsurancePolicyLineItem__c/fields/BrokerageRate__c.field-meta.xml
<CustomField>
    <fullName>BrokerageRate__c</fullName>
    <description>수수료율</description>
    <label>Brokerage Rate(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>