force-app/main/default/objects/InsurancePolicyLineItem__c/fields/EffectiveDateEND__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDateEND__c</fullName>
    <description>배서/인식 기준일</description>
    <formula>InsurancePolicy__r.EffectiveDateEND__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Date(END)</label>
    <type>Date</type>
</CustomField>