force-app/main/default/objects/InsurancePolicyLineItem__c/fields/EffectiveFromDateEND__c.field-meta.xml
<CustomField>
    <fullName>EffectiveFromDateEND__c</fullName>
    <formula>InsurancePolicy__r.EffectiveFromDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective From Date(END)</label>
    <type>Date</type>
</CustomField>