force-app/main/default/objects/InsurancePolicyLineItem__c/fields/EffectiveToDateEND__c.field-meta.xml
<CustomField>
    <fullName>EffectiveToDateEND__c</fullName>
    <formula>InsurancePolicy__r.EffectiveToDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective To Date(END)</label>
    <type>Date</type>
</CustomField>