force-app/main/default/objects/InsurancePolicyLineItem__c/fields/Endorse_Premium__c.field-meta.xml
<CustomField>
    <fullName>Endorse_Premium__c</fullName>
    <label>Endorse Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>