force-app/main/default/objects/InsurancePolicyLineItem__c/fields/InceptionDate__c.field-meta.xml
<CustomField>
    <fullName>InceptionDate__c</fullName>
    <formula>InsurancePolicy__r.CRSInceptionDatedt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inception Date</label>
    <type>Date</type>
</CustomField>