force-app/main/default/objects/InsurancePolicyLineItem__c/fields/Instal__c.field-meta.xml
<CustomField>
    <fullName>Instal__c</fullName>
    <description>분납회차</description>
    <label>No of Installment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>