force-app/main/default/objects/InsurancePolicyLineItem__c/fields/InstalDate__c.field-meta.xml
<CustomField>
    <fullName>InstalDate__c</fullName>
    <description>분납예정일</description>
    <label>Install Date</label>
    <type>Date</type>
</CustomField>