force-app/main/default/objects/InsurancePolicyLineItem__c/fields/InsurancePolicy__c.field-meta.xml
<CustomField>
    <fullName>InsurancePolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Insurance Policy Line Items</relationshipLabel>
    <relationshipName>InsurancePolicyLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>