force-app/main/default/objects/InsurancePolicyLineItem__c/fields/Insured__c.field-meta.xml
<CustomField>
    <fullName>Insured__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insured</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Policy Line Items (Insured)</relationshipLabel>
    <relationshipName>Insurance_Policy_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>