force-app/main/default/objects/InsurancePolicyLineItem__c/fields/InsurerPolicyNo_fm__c.field-meta.xml
<CustomField>
    <fullName>InsurerPolicyNo_fm__c</fullName>
    <formula>Participant__r.InsurerPolicyNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurer Policy No.</label>
    <type>Text</type>
</CustomField>