force-app/main/default/objects/InsurancePolicyLineItem__c/fields/IsAdjustmentRecord__c.field-meta.xml
<CustomField>
    <fullName>IsAdjustmentRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Adjustment Record?</label>
    <type>Checkbox</type>
</CustomField>