force-app/main/default/objects/InsurancePolicyLineItem__c/fields/LeadInsurer__c.field-meta.xml
<CustomField>
    <fullName>LeadInsurer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>간사사 여부</description>
    <label>Lead Insurer?</label>
    <type>Checkbox</type>
</CustomField>