force-app/main/default/objects/InsurancePolicyLineItem__c/fields/LKRefNo__c.field-meta.xml
<CustomField>
    <fullName>LKRefNo__c</fullName>
    <formula>InsurancePolicy__r.LKRefNoh__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LK Ref. No.</label>
    <type>Text</type>
</CustomField>