force-app/main/default/objects/InsurancePolicyLineItem__c/fields/LOB1__c.field-meta.xml
<CustomField>
    <fullName>LOB1__c</fullName>
    <formula>Text(InsurancePolicy__r.LOB1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOB1</label>
    <type>Text</type>
</CustomField>