force-app/main/default/objects/InsurancePolicyLineItem__c/fields/LOB2__c.field-meta.xml
<CustomField>
    <fullName>LOB2__c</fullName>
    <formula>Text( InsurancePolicy__r.LOB2__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOB2</label>
    <type>Text</type>
</CustomField>