force-app/main/default/objects/InsurancePolicyLineItem__c/fields/LOB3__c.field-meta.xml
<CustomField>
    <fullName>LOB3__c</fullName>
    <formula>TEXT( InsurancePolicy__r.LOB3__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOB3</label>
    <type>Text</type>
</CustomField>