force-app/main/default/objects/InsurancePolicyLineItem__c/fields/OriginalInsurancePolicyLineItem__c.field-meta.xml
<CustomField>
    <fullName>OriginalInsurancePolicyLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>최초 계약상세</description>
    <label>Original InsurancePolicy Details</label>
    <referenceTo>InsurancePolicyLineItem__c</referenceTo>
    <relationshipLabel>Insurance Policy Line Items(Original)</relationshipLabel>
    <relationshipName>InsurancePolicyLineItems_Original</relationshipName>
    <type>Lookup</type>
</CustomField>