force-app/main/default/objects/InsurancePolicyLineItem__c/fields/P_B__c.field-meta.xml
<CustomField>
    <fullName>P_B__c</fullName>
    <formula>-1 * (BrokerageAmt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P_B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>