force-app/main/default/objects/InsurancePolicyLineItem__c/fields/P_FL__c.field-meta.xml
<CustomField>
    <fullName>P_FL__c</fullName>
    <formula>IF(TEXT(CoBrokingType__c) = &quot;CO&quot; , BrokerageAmt__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P_FL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>