force-app/main/default/objects/InsurancePolicyLineItem__c/fields/P_R__c.field-meta.xml
<CustomField>
    <fullName>P_R__c</fullName>
    <formula>IF(TEXT(CoBrokingType__c) = &quot;CO&quot; , 0 , BrokerageAmt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P_R</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>