force-app/main/default/objects/InsurancePolicyLineItem__c/fields/ParentInsurancePolicyLineItem__c.field-meta.xml
<CustomField>
    <fullName>ParentInsurancePolicyLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>END Target InsurancePolicy Details</label>
    <referenceTo>InsurancePolicyLineItem__c</referenceTo>
    <relationshipLabel>Insurance Policy Line Items (END Target InsurancePolicy Details)</relationshipLabel>
    <relationshipName>InsurancePolicyLineItems_Parent</relationshipName>
    <type>Lookup</type>
</CustomField>