force-app/main/default/objects/InsurancePolicyLineItem__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant</label>
    <referenceTo>InsurancePolicyParticipant</referenceTo>
    <relationshipLabel>Insurance Policy Line Items</relationshipLabel>
    <relationshipName>InsurancePolicyLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>