force-app/main/default/objects/InsurancePolicyLineItem__c/fields/PaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDueDate__c</fullName>
    <label>Payment Due Date</label>
    <type>Date</type>
</CustomField>