force-app/main/default/objects/InsurancePolicyLineItem__c/fields/PerformanceFee__c.field-meta.xml
<CustomField>
    <fullName>PerformanceFee__c</fullName>
    <description>성과 수수료</description>
    <label>Performance Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>