force-app/main/default/objects/InsurancePolicyLineItem__c/fields/PeriodClose__c.field-meta.xml
<CustomField>
    <fullName>PeriodClose__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Period Close</label>
    <referenceTo>PeriodClose__c</referenceTo>
    <relationshipLabel>Insurance Policy Line Items</relationshipLabel>
    <relationshipName>Insurance_Policy_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>