force-app/main/default/objects/InsurancePolicyLineItem__c/fields/PolicyHolder_lk__c.field-meta.xml
<CustomField>
    <fullName>PolicyHolder_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Holder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Policy Line Items (Policy Holder)</relationshipLabel>
    <relationshipName>Insurance_Policy_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>