force-app/main/default/objects/InsurancePolicyLineItem__c/fields/PremiumKRW__c.field-meta.xml
<CustomField>
    <fullName>PremiumKRW__c</fullName>
    <formula>Premium__c  *  ExchangeRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premium(KRW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>