force-app/main/default/objects/InsurancePolicyLineItem__c/fields/PremiumSchedule_lk__c.field-meta.xml
<CustomField>
    <fullName>PremiumSchedule_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premium Schedule</label>
    <referenceTo>OPP_PremiumSchedule__c</referenceTo>
    <relationshipLabel>Insurance Policy Line Items</relationshipLabel>
    <relationshipName>Insurance_Policy_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>