force-app/main/default/objects/InsurancePolicyLineItem__c/fields/SignedLine__c.field-meta.xml
<CustomField>
    <fullName>SignedLine__c</fullName>
    <description>보험사 참여지분</description>
    <label>Signed Line(%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>