force-app/main/default/objects/InsurancePolicyLineItem__c/fields/TPB__c.field-meta.xml
<CustomField>
    <fullName>TPB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CO-Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Policy Line Items (TPB)</relationshipLabel>
    <relationshipName>InsurancePolicyLineItems_TPB</relationshipName>
    <type>Lookup</type>
</CustomField>