force-app/main/default/objects/InsurancePolicyLineItem__c/fields/VariousApprovalMgmt__c.field-meta.xml
<CustomField>
    <fullName>VariousApprovalMgmt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Various Approval Mgmt</label>
    <referenceTo>COM_VariousApprovalMgmt__c</referenceTo>
    <relationshipLabel>Insurance Policy Line Items</relationshipLabel>
    <relationshipName>InsurancePolicyLineItems_Approval</relationshipName>
    <type>Lookup</type>
</CustomField>