force-app/main/default/objects/InsurancePolicyLineItem__c/fields/WritingCarrierAccountId__c.field-meta.xml
<CustomField>
    <fullName>WritingCarrierAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurer/Cedant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Policy Line Items (Insurer/Cedant)</relationshipLabel>
    <relationshipName>InsurancePolicyLineItems_WCAccount</relationshipName>
    <type>Lookup</type>
</CustomField>